Added server debugging target: tomcat-start-with-debug